fix: remove unused imports, code cleaning
fix: remove unnecessary initialized variable

chore: add todo